rename program-meetup to meetup template

--- a/main/templates/main/meetup.html
+++ b/main/templates/main/meetup.html
@@ -6,25 +6,25 @@
 {% block title %}The OK!Thess Meetup{% endblock %}
 
 {% block content %}
-    <div class="container program">
+    <div class="container meetup">
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-12">
-                <div class="program-meetup">
-                    <div class="program-meetup-jumbotron">
+                <div class="meetup-body">
+                    <div class="meetup-body-jumbotron">
                         <h1>OK!Thess Meetup</h1>
                         <br>
-                        <div class="program-meetup-jumbotron-subtitle-line">
+                        <div class="meetup-body-jumbotron-subtitle-line">
                             Our meetup's purpose is to boost enterpreneurship and
                         </div>
                         <br>
-                        <div class="program-meetup-jumbotron-subtitle-line">
+                        <div class="meetup-body-jumbotron-subtitle-line">
                             innovation in Thessaloniki's ecosystem.
                         </div>
                     </div>
-                    <div class="program-meetup-content">
+                    <div class="meetup-body-content">
                         <div class="row">
                             <div class="col-md-8 col-sm-8">
-                                <div class="program-meetup-content-body">
+                                <div class="meetup-body-content-body">
                                     <h2>Description</h2>
                                     <p>
                                         Our meetup is awesome and meetups
@@ -34,14 +34,14 @@
                                 </div>
                             </div>
                             <div class="col-md-4 col-sm-4">
-                                <div class="program-meetup-content-side">
-                                    <div class="program-meetup-content-side-title">
+                                <div class="meetup-body-content-side">
+                                    <div class="meetup-body-content-side-title">
                                         <i class="glyphicon glyphicon-console"></i>
                                         Next meetup
                                     </div>
-                                    <div class="program-meetup-content-side-name">Meetup #38</div>
-                                    <div class="program-meetup-content-side-date">Thursday, 25 Oct, 2017</div>
-                                    <div class="program-meetup-content-side-time">6pm</div>
+                                    <div class="meetup-body-content-side-name">Meetup #38</div>
+                                    <div class="meetup-body-content-side-date">Thursday, 25 Oct, 2017</div>
+                                    <div class="meetup-body-content-side-time">6pm</div>
                                 </div>
                             </div>
                         </div>
