add resources link

--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -61,8 +61,7 @@
                                 target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
                                 target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
+                        <li><a href="{% url 'main:resources' %}"><strong>See all resources</strong> <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                     </ul>
                 </div>
                 <div class="sidebar-module">
