--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -25,7 +25,7 @@
                     <button class="accordion" id="participate">{% trans 'How I can participate' %}</button>
                     <div class="panel">
                         <div class="panel-inner">
-                            {{ about_texts.how_text|safe }}
+                            {{ about_texts.participate_text|safe }}
                         </div>
                     </div>
                     <button class="accordion" id="coworking">{% trans 'Coworking space' %}</button>
