--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -31,36 +31,9 @@
                 <h3>{% trans 'Resources' %}</h3>
                 <div class="sidebar-module sidebar-module-inset">
                     <ul>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
-                        <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
+                        {% for resource in resources_list %}
+                            <li><a href="{{ resource.url }}" target="_blank">{{ resource.title }} <i class="glyphicon glyphicon-chevron-right"></i></a></li>
+                        {% endfor %}
                         <li><a href="{% url 'main:resources' %}"><strong>See all resources</strong> <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                     </ul>
                 </div>
