add sirodoht on crafters

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="footer-content-author">
-            Lovingly crafted by <a href="http://ntemposd.me" target="_blank">ntemposd</a>
+            Lovingly crafted by <a href="http://ntemposd.me" target="_blank">ntemposd</a> and <a href="https://sirodoht.xyz/" target="_blank">sirodoht</a>
         </div>
     </footer>
 
