--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -13,106 +13,19 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="col-md-6">
-                            <h2>Entrepreneurship</h2>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
+                        {% for category in categories_list %}
+                            <div class="col-md-6">
+                                <h2>{{ category.name }}</h2>
+                                {% for resource in category.resource_set.all %}
+                                    <div class="resources-item">
+                                        <a class="resources-item-title" href="{{ resource.url }}" target="_blank">
+                                            {{ resource.title }}
+                                        </a>
+                                        {{ resource.description|default:"" }}
+                                    </div>
+                                {% endfor %}
                             </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <h2>Innovation</h2>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="col-md-6">
-                            <h2>Technology</h2>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <h2>Funding</h2>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                            <div class="resources-item">
-                                <a class="resources-item-title" href="#" target="_blank">
-                                    Resource title
-                                </a>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Quos, eius nihil voluptatibus quis voluptatum corporis.
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
