--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -53,7 +53,7 @@ Mix and Connect</strong> with like-minded peers.
                 </div>
                 <div class="slider">
                     <img src="{% static '/main/img/slider-3.jpg' %}" class="slider-img">
-                    <div class="slider-text">{% trans 'Accelerator' %}</div>
+                    <div class="slider-text">{% trans 'Pre-incubation' %}</div>
                 </div>
             </div>
         </div>
