--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -34,11 +34,10 @@
                         </ul>
                     </div>
                     <div class="program-sidebar-about">
-                        <h4>{% trans 'About alumni' %}</h4>
                         <div class="program-sidebar-box">
-{% blocktrans %}
-program alumni sidebar
-{% endblocktrans %}
+                          {% blocktrans %}
+                          Our graduates comprise the wider OK!Thess network. They meet at regular intervals to exchange post OK!Thess views and knowledge and they are also invited to help our hosted teams as Mentors.
+                          {% endblocktrans %}
                         </div>
                         <br>
                     </div>
