--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -39,11 +39,10 @@
                         </ul>
                     </div>
                     <div class="program-sidebar-about">
-                        <h4>{% trans 'How you can be a mentor' %}</h4>
                         <div class="program-sidebar-box">
-{% blocktrans %}
-program mentors sidebar how to be a mentor
-{% endblocktrans %}
+                          {% blocktrans %}
+                          Experienced professionals who help to guide less experienced people. The mentors may be older or younger than the people that are being mentored, but they must have a certain area of expertise. Want to help our teams as a mentor? Drop us an email at <strong>dimitri@okthess.gr</strong>. 
+                          {% endblocktrans %}
                         </div>
                         <br>
                     </div>
