--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -9,6 +9,13 @@
     <section class="container apply">
         <div class="row">
             <div class="col-md-12">
+              {% blocktrans %}
+              <p>We accept at any time submissions from individuals or groups with innovative ideas, regardless their stage, who would like to benefit from the services of the OK!Thess pre-incubator in order to set up a startup business or accelarate the one that they already have set up.</p>
+              <p>Proposals shall be evaluated at regular intervals, the exact dates are being announced on this website.</p>
+              <p>The current submission period closes on September the 13th 2017. Results will be announced on September the 19th 2017. The incubation period starts with a compulsory bootcamp that starts on the 2nd and lasts until the 13th of October.</p>
+              <p>To participate, you either fill in the following form, or just answer the questions in the body of an e-mail and send it to <strong>apply@okthess.gr</strong></p>
+              {% endblocktrans %}
+              <a class="btn-apply" href="http://ntemposd.me/" target="_blank">{% trans 'Information - GR' %}</a><a class="btn-apply" href="http://ntemposd.me/" target="_blank">{% trans '<nobr>Internal Regulation</nobr>' %}</a>
                 {% if messages %}
                     <p class="alert alert-success">
                         {% for message in messages %}
