--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -40,9 +40,7 @@
                     </div>
                     <div class="program-sidebar-about">
                         <div class="program-sidebar-box">
-                          {% blocktrans %}
-                          Experienced professionals who help to guide less experienced people. The mentors may be older or younger than the people that are being mentored, but they must have a certain area of expertise. Want to help our teams as a mentor? Drop us an email at <strong>dimitri@okthess.gr</strong>.
-                          {% endblocktrans %}
+                          {% trans 'Experienced professionals who help to guide less experienced people. The mentors may be older or younger than the people that are being mentored, but they must have a certain area of expertise. Want to help our teams as a mentor? Drop us an email at <strong>dimitri@okthess.gr</strong>.' %}
                         </div>
                         <br>
                     </div>
