add title for featured news

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -60,6 +60,7 @@ Mix and Connect</strong> with like-minded peers.
     </div>
     <div class="container index-blog">
         <div class="row">
+          <span class="glyphicon glyphicon-calendar"></span>{% trans 'Featured <strong>News</strong>' %}
             {% for post in featured_posts_list %}
                 <div class="col-md-4 col-sm-4 index-blog-item">
                     <a href="{% url 'main:blog_post' post.slug %}" class="index-blog-item-title">
@@ -79,9 +80,9 @@ Mix and Connect</strong> with like-minded peers.
     <div class="container index-events">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <a class="btn-black" href="{% url 'main:events' %}" role="button">
+
                     <span class="glyphicon glyphicon-calendar"></span>{% trans 'Upcoming Community <strong>Meetups</strong>' %}
-                </a>
+
                 <div class="index-events-content">
                     {% for event in events_list %}
                         <div class="index-events-content-single">
