--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -59,9 +59,9 @@ Mix and Connect</strong> with like-minded peers.
         </div>
     </div>
     <div class="container index-blog">
-      <a class="btn-black" href="" role="button">
-          <span class="glyphicon glyphicon-pencil"></span>{% trans 'Featured <strong>News</strong>' %}
-      </a>
+      <div class="index-blog-header">
+       <span class="glyphicon glyphicon-pencil"></span>{% trans 'Featured <strong>News</strong>' %}
+      </div>
         <div class="row">
             {% for post in featured_posts_list %}
                 <div class="col-md-4 col-sm-4 index-blog-item">
